--- a/app/assets/stylesheets/login_page.css
+++ b/app/assets/stylesheets/login_page.css
@@ -1,5 +1,6 @@
 #loginHeaderContainer {
   display: flex;
+  justify-content: center;
   width: 100%;
   background-color:  #3b5998;
   color: white;
@@ -10,22 +11,84 @@
   flex-direction: column;
   align-items: center;
   font-family: helvetica, arial, sans-serif;
-  background: #fff;
+  background: #edf0f5;
+  width: 100%;
+  height: 100%;
+}
+
+.descriptionText {
+  padding: 42px 0 24px;
+  font-size: 28px;
+  line-height: 36px;
+  font-family: 'Freight Sans Bold', helvetica, arial, sans-serif !important;
+  font-weight: bold !important;
+  letter-spacing: normal;
+  text-rendering: optimizelegibility;
+  color: #333;
+
+}
+
+.loginText {
+  font-family: 'Freight Sans Bold', helvetica, arial, sans-serif !important;
+  font-weight: bold !important;
+  letter-spacing: normal;
+  text-rendering: optimizelegibility;
+  font-size: 17px;
+  line-height: 22px;
+  color: #333;
+  margin-left: 15px;
+}
+
+.loginSubText {
+  color: #666;
+  font-size: 15px;
+  line-height: 20px;
+  margin-left: 10px;
+}
+
+#loginPageDescription {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding-right: 25px;
+}
+
+#loginHeaderContent{
+  display: flex;
+  width: 80%;
+}
+
+.loginAppDescription {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 #loginPageContent {
   display: flex;
+  height: 100%;
+  width: 80%;
+  word-break: break-word;
 }
 
 #loginPostImage {
-  content: url(https://scontent.fsnc1-1.fna.fbcdn.net/t39.2365-6/851565_602269956474188_918638970_n.png)
+  content: url(https://scontent.fsnc1-1.fna.fbcdn.net/t39.2365-6/851565_602269956474188_918638970_n.png);
 }
 
-#loginImage {
-  content: url(http://www.pammarketingnut.com/wp-content/uploads/iStock_000014250706XSmall.jpg);
-
+#loginMonitorImage {
+  content: url(https://scontent.fsnc1-1.fna.fbcdn.net/t39.2365-6/851585_216271631855613_2121533625_n.png);
 }
+
+#loginButtonContainer {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 25px;
+}
+
+/*http://www.pammarketingnut.com/wp-content/uploads/iStock_000014250706XSmall.jpg*/
 
 #FBHeader {
-  margin-right: 15px;
+  margin-right: 10px;
 }
