--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,16 +18,21 @@
 html {
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 #content {
   width: 100%;
   height: 100%;
+  background: #edf0f5;
 }
 
 #app {
