--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,3 +39,11 @@ body {
   height: 100%;
   width: 100%;
 }
+
+#facebookLogo {
+  content: url(http://www.freeiconspng.com/uploads/images-facebook-f-logo-png-transparent-background-page-2-29.png);
+  height: 40px;
+  width: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
