--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,30 +14,32 @@
  *= require_self
  */
 
-
 html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+  height: 100%;
 }
 
-body {
-  width: 100%;
+html , body{
+  min-width: 100%;
+  min-height: 100% !important;
   height: 100%;
   margin: 0;
   padding: 0;
 }
+ul {
+  padding-bottom: 20px;
+  margin: 0;
+}
+
 
 #content {
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   background: #edf0f5;
 }
 
 #app {
-  height: 100%;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 #facebookLogo {
