--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,13 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 
-  <% if current_user %>
-    <script type="text/javascript">
-        window.currentUser = <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
-    </script>
-  <% end %>
+  <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    window.cloudinary_options = {
+      cloud_name: 'dyfgfvczc',
+      upload_preset: 'jclslmui'
+    }
+  </script>
 </head>
 <body>
   <script>
