--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -54,6 +54,9 @@
   flex-direction: column;
   border: 1px solid black;
   background: white;
+  margin: 20px;
+  min-width: 200px;
+  padding: 30px;
 }
 
 .accountItem:hover {
