--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -5,10 +5,15 @@
 
 .accountsList {
   display: flex;
+  width: 100%;
+  padding: 0px;
+  justify-content: center;
 }
 
 #accountsIndex {
-  width: 70%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 #homeNavContainer {
