--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -35,7 +35,13 @@
 
 #navButtons {
   display: flex;
+  align-items: center;
+}
 
+.navText {
+  color: white;
+  margin-left: 15px;
+  font-size: 14px;
 }
 
 #navButtons:hover {
