--- a/app/assets/stylesheets/account_page.css
+++ b/app/assets/stylesheets/account_page.css
@@ -12,15 +12,11 @@
   margin-left: 50%;
 }
 
-.postIndexItem {
-  border: 1px solid black;
+
+
+.accountContent {
+  margin-top: 80px;
 }
-
-.postIndexItem:hover {
-  cursor: pointer;
-}
-
-
 
 .accountPage {
   display: flex;
@@ -84,6 +80,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 10px;
+  border-radius: 5px;
 }
 
 .statusInput {
@@ -97,11 +94,16 @@
 }
 
 .accountInformation {
-  width: 35%;
+  position: fixed;
+  width: 30%;
+}
+
+.accountInfoContainer {
+  width: 30%;
 }
 
 .postInformation {
-  width: 65%;
+  width: 70%;
   padding-right: 50px;
 }
 
@@ -109,10 +111,12 @@
   width: 100%;
   height: auto;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 .coverPhotoContainer {
   width: 100%;
   height: 275px;
   overflow: hidden;
+  position: relative;
 }
