--- a/app/assets/stylesheets/form_radio_buttons.css
+++ b/app/assets/stylesheets/form_radio_buttons.css
@@ -27,6 +27,7 @@
   line-height: 20px;
   font-size: 13px;
   border-radius: 3px;
+  text-align: center;
 }
 
 .radioButtons input[type="radio"]:checked + label {
