--- a/app/assets/stylesheets/account_page.css
+++ b/app/assets/stylesheets/account_page.css
@@ -12,7 +12,14 @@
   margin-left: 50%;
 }
 
-
+.accountName {
+  color: #1d2129;
+  font-family: HelveticaNeue-Light, helvetica, arial, sans-serif;
+  font-size: 24px;
+  line-height: 26px;
+  vertical-align: middle;
+  word-wrap: normal;
+}
 
 .accountContent {
   margin-top: 80px;
@@ -42,6 +49,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin: 15px;
 }
 
 
@@ -51,11 +59,12 @@
   width: 100%;
 }
 
-
+/*dddfe2*/
 .postForm {
   margin-top: 20px;
   margin-bottom: 10px;
   overflow:hidden;
+  padding: 15px;
 }
 
 .accountName {
@@ -73,13 +82,12 @@
 
 #createPostForm {
   background: white;
-  width: 98%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding: 10px;
   border-radius: 5px;
 }
 
@@ -95,16 +103,15 @@
 
 .accountInformation {
   position: fixed;
-  width: 30%;
+  width: 20%;
 }
 
 .accountInfoContainer {
-  width: 30%;
+  width: 35%;
 }
 
 .postInformation {
-  width: 70%;
-  padding-right: 50px;
+  width: 65%;
 }
 
 .coverPhoto {
