--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,7 +40,7 @@ li {
 #content {
   min-width: 100%;
   min-height: 100%;
-  background: #edf0f5;
+  background: #f6f7f9;
 }
 
 #app {
@@ -57,5 +57,13 @@ li {
 }
 
 #facebookLogo:hover {
+  cursor: pointer;
+}
+
+.normalButton {
+  margin-left: 20px;
+}
+
+.normalButton:hover {
   cursor: pointer;
 }
