--- a/app/assets/stylesheets/posts_index.css
+++ b/app/assets/stylesheets/posts_index.css
@@ -1,14 +1,14 @@
 .postIndexItem {
   background: white;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
   border-radius: 5px;
 }
 
-.postIndexItemContent {
-  padding: 10px;
+.postButtons {
+  display: flex;
+
 }
 
 .postFormImage {
@@ -42,9 +42,4 @@
 .postAuthorMiniInfo span {
   margin-top: 15px;
   color: #3b5998;
-}
-
-
-.postIndexItem:hover {
-  cursor: pointer;
 }
