--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,7 +40,8 @@ li {
 #content {
   min-width: 100%;
   min-height: 100%;
-  background: #f6f7f9;
+  /*background: #f6f7f9;*/
+  background-color: #edf0f5
 }
 
 #app {
