--- a/app/assets/stylesheets/account_page.css
+++ b/app/assets/stylesheets/account_page.css
@@ -72,7 +72,7 @@
   margin-bottom: 20px;
 }
 
-.accountInfoImage {
+.infoImage {
   margin-top: 20px;
   border-radius: 5px;
   border: 5px solid #fff;
