pagination now works and pictures now use full_picture so its not blurry. going to style homepage

--- a/app/assets/stylesheets/account_page.css
+++ b/app/assets/stylesheets/account_page.css
@@ -113,6 +113,7 @@
 
 .postInformation {
   width: 65%;
+  margin-bottom: 75px;
 }
 
 .coverPhoto {
@@ -127,4 +128,8 @@
   height: 275px;
   overflow: hidden;
   position: relative;
+}
+
+.moreButton:hover {
+  cursor: pointer;
 }
