--- a/app/assets/stylesheets/posts_index.css
+++ b/app/assets/stylesheets/posts_index.css
@@ -13,14 +13,21 @@
 }
 
 .postFormImage {
+  width: 70%;
   height: auto;
 }
 
 .postFormImageContainer {
-  display: flex;
-  justify-content: center;
+  display: inline-block;
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 20px;
+}
+
+
+.postAuthorPic {
+  width: 60px;
+  height: 60px;
 }
 
 
@@ -28,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 15px;
 }
 
 .postAuthorMiniInfo {
@@ -45,8 +52,14 @@
   color: #3b5998;
 }
 
+.postPicture {
+  width: 50%;
+  height: auto;
+}
+
 .postIndexItemContent {
   padding: 20px;
+  display: inline-block;
 }
 
 .postMessage {
