--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -1,6 +1,16 @@
 .accountImage {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+  border-radius: 5px;
+  border: 5px solid white;
+}
+
+.accountCategory {
+  color: #666;
+  font-size: 15px;
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 
 .accountsList {
@@ -8,6 +18,7 @@
   width: 100%;
   padding: 0px;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 #accountsIndex {
@@ -51,9 +62,11 @@
 
 .accountsContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 70%;
   margin-top: 80px;
+  background-color: white;
 }
 
 #homePageContent{
@@ -65,13 +78,43 @@
 .accountItem {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  background: white;
+  align-items: center;
+  border: 1px solid #dddfe2;
+  background-color: #f6f7f9;
   margin: 20px;
-  min-width: 200px;
-  padding: 30px;
+  width: 300px;
+  word-break: break-word;
+}
+
+
+.objectName {
+  color: #1d2129;
+  font-family: HelveticaNeue-Light, helvetica, arial, sans-serif;
+  font-size: 24px;
+  line-height: 26px;
+  vertical-align: middle;
+  word-wrap: normal;
+  text-align: center;
 }
 
 .accountItem:hover {
   cursor: pointer;
+}
+
+.accountPermissions {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.homepageHeader {
+  padding: 42px 0 24px;
+  font-size: 28px;
+  line-height: 36px;
+  font-family: 'Freight Sans Bold', helvetica, arial, sans-serif !important;
+  font-weight: bold !important;
+  letter-spacing: normal;
+  text-rendering: optimizelegibility;
+  color: #333;
 }
