publishing now works going to test pusher

--- a/app/assets/stylesheets/post_detail.css
+++ b/app/assets/stylesheets/post_detail.css
@@ -36,6 +36,14 @@
 
 .postContent {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.postContent span {
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #backButton {
