--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -109,12 +109,12 @@
 }
 
 .homepageHeader {
-  padding: 42px 0 24px;
-  font-size: 28px;
-  line-height: 36px;
-  font-family: 'Freight Sans Bold', helvetica, arial, sans-serif !important;
-  font-weight: bold !important;
-  letter-spacing: normal;
-  text-rendering: optimizelegibility;
-  color: #333;
+  color: #1d2129;
+  font-family: HelveticaNeue-Light, helvetica, arial, sans-serif;
+  padding: 40px;
+  font-size: 30px;
+  line-height: 26px;
+  vertical-align: middle;
+  word-wrap: normal;
+  text-align: center;
 }
