--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
       upload_preset: 'jclslmui'
     }
   </script>
+
+
+  <script>
+    window.pusher = new Pusher('f0ed6004e66da55f7fbf', {
+      encrypted: true
+    });
+
+    window.channel = pusher.subscribe('account_update');
+  </script>
 </head>
 <body>
   <script>
