--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,12 @@
     window.pusher = new Pusher('f0ed6004e66da55f7fbf', {
       encrypted: true
     });
+
+    window.channel = window.pusher.subscribe('account_update');
+
   </script>
 
-  
+
   <script>
     window.fbAsyncInit = function() {
     FB.init({
