--- a/app/assets/stylesheets/comments_form.css
+++ b/app/assets/stylesheets/comments_form.css
@@ -5,7 +5,7 @@
   margin-bottom: 20px;
 }
 
-#asPageRadioButtonsComment {
+.asPageRadioButtonsComment div {
   display: flex;
   justify-content: flex-end;
   width: 100%;
